manifests/media-stack/jellyseerr/jellyseerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      nodeSelector:
        kubernetes.io/hostname: homeserver
      securityContext:
        fsGroup: 1000
      containers:
        - name: jellyseerr
          image: ghcr.io/seerr-team/seerr:latest
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config-storage
              mountPath: /app/config
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: jellyseerr-config-pvc
