manifests/media-stack/jellyseerr/jellyseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: jellyseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
