manifests/media-stack/jellyseerr/jellyseerr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-ingressroute
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyseerr.janikhenz.ch`)
      kind: Rule
      services:
        - name: jellyseerr-service
          port: 5055
